tests/basic/check/not_neg/140.pan.out
tests/basic/check/not_neg/140.pan:5:1-5: error: unable to verify type of f140